GNOME Bugzilla – Bug 662063
warning: variables set but not used
Last modified: 2011-12-25 02:54:26 UTC
warning: variables set but not used after fixed 'priv' variable, other unused variables are founded. warnings show up in building, current master tree, the latest commit is 5c961312d40f9092f4d7b10e02e018e0912957c7
Created attachment 199299 [details] [review] Fix warning: variable 'cmd' set but not used Fix warning: variable 'cmd' set but not used
Created attachment 199300 [details] [review] after fixed 'cmd' variable, all unused variables are fixed now. after fixed 'cmd' variable, all unused variables are fixed now.
Review is in progress.
Review of attachment 199299 [details] [review]: This patch is good, I'm pushing it with a slight change (see rest of review). ::: src/planner-default-week-dialog.c @@ +537,3 @@ default_week_cmd_edit_free (PlannerCmd *cmd_base) { +/* FIXME: cmd_base not freed It would be nice to actually fix this. ::: src/planner-task-dialog.c @@ +1076,3 @@ + + TaskCmdEditNote __attribute__ ((unused)) *cmd; + This is not the right way to fix this. I'm doing it another way and pushing that right after your patches.
Review of attachment 199300 [details] [review]: Ok too, I'm pushing it as well.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report and your patches.