Fix warning: variable 'cmd' set but not used

https://bugzilla.gnome.org/show_bug.cgi?id=662063